SonarQube Fix: Performance - Method invokes inefficient Number constructor; use static valueOf instead
Signed-off-by: James Sutton <james.sutton@uk.ibm.com>