@@ -55,7 +55,7 @@ public class SubPanel implements ActionListener {
 	private JCheckBox  receivedRetain;
 	private JTextArea receivedData;
 	private MQTTFrame mqttMgr = null;
-	private Integer[]  qos = { new Integer(0), new Integer(1), new Integer(2) };
+	private Integer[]  qos = { Integer.valueOf(0), Integer.valueOf(1), Integer.valueOf(2) };
 	private JComboBox qosList;
 	private boolean hexDisplay = true;
     private JLabel subLabel = null;
